--- a/zotero-api.qmd
+++ b/zotero-api.qmd
@@ -17,7 +17,7 @@ library(jsonlite)
 
 # Zotero API 的 URL
 user_id = Sys.getenv("ZOTERO_USER_ID")
-url <- paste0("https://api.zotero.org/users/", user_id, "/items/top?format=json")
+url <- paste0("https://api.zotero.org/users/", user_id, "/items/top?format=json&limit=50")
 
 # Zotero API 的 key
 key <- Sys.getenv("ZOTERO_API_KEY")
@@ -27,7 +27,7 @@ response <- GET(url, add_headers("Zotero-API-Key" = key))
 items <- content(response, as = "text", encoding = "UTF-8") |> fromJSON()
 
 # 查看数据结构
-str(items)
+dim(items)
 ```
 
 每个文献的 `language` 字段表示该文献的语言，保存在 `data$language` 中：
@@ -43,6 +43,7 @@ items$data$language
 Zotero 默认输出 25 条文献，最大可以设置为 100 条。如果需要获取全部的文献，可以使用 `Zotero API` 的 `limit` 参数和 `start` 参数。
 
 ```{r}
+#| eval: false
 # 获取全部的文献列表
 items_all = items
 start = 25
@@ -59,79 +60,6 @@ while (TRUE) {
 }
 ```
 
-### 访问本地数据库
-
-因为使用 Zotero API 很容易因为连接问题中断，所以不如直接通过读取 Zotero 的数据库文件来获取全部的文献列表。Zotero 的数据库文件位于 Zotero 的安装目录下。使用 `RSQLite` 包可以方便地读取 Zotero 的数据库文件。
-
-```{r}
-# 加载包
-library(RSQLite)
-
-# 使用 dbplyr 读取 Zotero 数据库
-library(dplyr)
-library(dbplyr)
-library(stringr)
-db <- dbConnect(RSQLite::SQLite(), "/Users/gaoch/Zotero/zotero.sqlite")
-
-# 列出数据库中的 table
-dbListTables(db)
-```
-
-```{r}
-# language field id
-fields = tbl(db, "fields")
-field_id = tbl(db, "fields") |> 
-  filter(fieldName %in% c("language", "title"))
-field_id
-```
-
-```{r}
-# 几个需要用到的数据表
-items = tbl(db, "items")
-item_data = tbl(db, "itemData") 
-item_data_values = tbl(db, "itemDataValues")
-
-# 查询标题
-item_data_title = item_data |> 
-  filter(fieldID == 1) |> 
-  left_join(item_data_values) |> 
-  collect()
-
-# 查询语言
-item_data_language = item_data |>
-  filter(fieldID == 7) |>
-  left_join(item_data_values) |> 
-  collect()
-```
-
-```{r}
-item_data_language |> 
-  pull(value) |> 
-  table()  |>
-  sort(decreasing = TRUE) |> 
-  barplot()
-```
-
-```{r}
-item_data_language_2 <- item_data_title  |> 
-  mutate(language = case_when(
-    str_length(str_remove_all(value, "[a-zA-Z0-9:punct:]+")) < str_length(value)/3 ~ "en",
-    TRUE ~ "zh"
-  ))
-```
-
-```{r}
-items  |> pull(language) |> table() |> sort(decreasing = TRUE) |> barplot()
-```
-
-
-
-
-```{r}
-# 关闭数据库连接
-dbDisconnect(db)
-```
-
 ### 查找未设置语言的文献
 
 ```{r}
@@ -139,6 +67,7 @@ dbDisconnect(db)
 library(dplyr)
 library(stringr)
 items_unk = items  |> 
+  as_tibble() |>
   filter(.data$data$language == "")
   
 data = items_unk |> 
@@ -205,7 +134,6 @@ Content-Type: application/json
 ```
 
 
-
 ```{r}
 # 更新使用的 API 接口
 url_batch = paste0("https://api.zotero.org/users/", user_id, "/items")
@@ -213,7 +141,9 @@ url_batch = paste0("https://api.zotero.org/users/", user_id, "/items")
 # 拆分为 50 个一组的批处理任务
 n = ceiling(nrow(data) / 50)
 for (i in 1:n) {
-  item_batch = data[(i-1)*50 + 1:min(i*50, nrow(data)), ] |> 
+  # 获取当前批次的文献
+  data_batch = data[(i-1)*50 + 1:min(i*50, nrow(data)), ]
+  item_batch = data_batch |> 
     mutate(language = "en") |> 
     select(key, version, language) |> 
     toJSON(auto_unbox = TRUE, pretty = TRUE)
@@ -221,35 +151,11 @@ for (i in 1:n) {
   response <- POST(url_batch, add_headers("Zotero-API-Key" = key), body = item_batch, encode = "json")
 
   # 处理相应
-  if (!str_detect(response$status_code, "^2")) {
-    print(paste0("更新文献失败"))
+  if (str_detect(response$status_code, "^2")) {
+    print(glue::glue("更新{nrow(data_batch)}篇文献成功！"))
+  } else {
+    print(glue::glue("更新{nrow(data_batch)}篇文献失败！"))
     message(content(response, as = "text", encoding = "UTF-8"))
   }
 }
-```
-
-```{r}
-# 更新文献的语言字段
-for (item in items) {
-  if (item$language == "zh-CN") {
-    item$language <- "zh"
-      print(paste0("更新文献 ", item_key, " 失败"))
-      message(content(response, as = "text", encoding = "UTF-8"))
-    }
-}
-```
-
-
-
-```{r}
-# 更新文献的语言字段
-# 更新文献的语言字段
-for (item in items) {
-  if (item$language == "zh-CN") {
-    item$language <- "zh"
-  }
-  # 更新文献
-  response <- PUT(url, add_headers("Zotero-API-Key" = key), body = toJSON(item), encode = "json")
-}
-
 ```
